--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </a>
 
-        <a href="fantasía.html" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Books-Fantas-a/" style="text-decoration: none;">
             <div class="book-box">
                 <span class="book-icon">🌈</span>
                 <h3>Fantasía</h3>
@@ -105,4 +105,5 @@
 
     <script src="index.js"></script>
 </body>
+
 </html>
