--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="books-container">
-        <a href="aventura.html" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Aventura/" style="text-decoration: none;">
             <div class="book-box">
                 <span class="book-icon">🌟</span>
                 <h3>Aventura</h3>
@@ -54,7 +54,7 @@
             </div>
         </a>
 
-        <a href="drama.html" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Drama/" style="text-decoration: none;">
             <div class="book-box">
                 <span class="book-icon">🎭</span>
                 <h3>Drama</h3>
@@ -62,7 +62,7 @@
             </div>
         </a>
 
-        <a href="https://jacque221.github.io/Books-Fantas-a/" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Fantas-a/" style="text-decoration: none;">
             <div class="book-box">
                 <span class="book-icon">🌈</span>
                 <h3>Fantasía</h3>
@@ -70,7 +70,7 @@
             </div>
         </a>
 
-        <a href="arte.html" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Arte/" style="text-decoration: none;">
             <div class="book-box">
                 <span class="book-icon">🎨</span>
                 <h3>Arte</h3>
@@ -92,7 +92,7 @@
             <a href="https://maps.google.com/?q=UACM+Casa+Libertad" target="_blank" class="icon-bubble" title="Ubicación">📍</a>
         </div>
 
-        <a href="contactame.html" style="text-decoration: none;">
+        <a href="https://jacque221.github.io/Contactame/" style="text-decoration: none;">
             <button class="mega-button">💌 CONTÁCTAME</button>
         </a>
     </section>
@@ -105,5 +105,4 @@
 
     <script src="index.js"></script>
 </body>
-
 </html>
